@@ -1,5 +1,8 @@
 			irker history 
 
+Repository header:
+  Add the ability to set the notification-message template (Debian bug #824512)
+
 2.17: 2016-03-14
   Add a reconnect delay (Debian bug #749650).
   Add proxy support (requres setting some variables in the source file).
